brat/test/golden/error/toplevel-leftovers2.brat
f(Nat) -> Nat, Bool
f(x) = x
